--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,8 @@ ul {
 .heading {
   background-color: var(--second-bg-color);
   height: 600px;
+  padding-top: 200px;
+  padding-bottom: 280px;
 }
 
 /* ==================== HEADER===================*/
@@ -135,8 +137,7 @@ ul {
   text-align: center;
   text-transform: uppercase;
   margin: 0;
-  padding-top: 200px;
-  padding-bottom: 280px;
+  margin-bottom: 30px;
 }
 
 /*button studio*/
@@ -152,6 +153,8 @@ ul {
   padding: 10px 32px;
   text-align: center;
   margin-top: 30px;
+  display: block;
+  margin: auto;
 }
 
 /*стилизация шапки сайта, придание цвета фону*/
@@ -169,6 +172,8 @@ ul {
 .container {
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
   width: 1200px;
 }
 /*====================СТИЛИ ДЛЯ ГЕОМЕТРИИ КОНТЕНТА ШАПКИ================= */
@@ -330,6 +335,8 @@ OR
 .foot-main {
   margin: 0;
   padding: 0;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .footer {
   background-color: var(--second-bg-color);
@@ -363,6 +370,8 @@ OR
 .decor-footer {
   padding-top: 60px;
   padding-bottom: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 /* ====================END FOOTER===================*/
 
@@ -417,6 +426,8 @@ OR
   width: 370px;
   height: 404px;
   margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .features-li .title {
@@ -429,7 +440,7 @@ OR
 
 .text-elem {
   margin: 0;
-  padding: ;
+  padding: 0;
 }
 
 .features {
