--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,24 @@
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  display: block;
+}
+
+body {
+  color: var(--primary-text-color);
+  background-color: var(--third-bg-color);
+  font-family: Roboto, sans-serif;
+}
+/*убираем точки слева*/
+ul {
+  list-style: none;
+}
+
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
@@ -23,18 +44,6 @@
 /* цвет фона 4 вторичный background: #F5F4FA; */
 
 /* LOGO  color: акцент #2196F3; +color: #212121; */
-
-body {
-  color: var(--primary-text-color);
-  background-color: var(--third-bg-color);
-  font-family: Roboto, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-/*убираем точки слева*/
-ul {
-  list-style: none;
-}
 
 /* top line */
 /*спросить: почему если убрать класс .nav, то text-decoration: none; не работает?*/
@@ -77,10 +86,6 @@ ul {
 /* ====================END LOGOTIP===================*/
 
 /* ======================TOP LINE=====================*/
-.list {
-  margin: 0;
-  padding: 0;
-}
 
 .site-nav .link {
   display: block;
@@ -123,6 +128,7 @@ ul {
 /* */
 .heading {
   background-color: var(--second-bg-color);
+  box-sizing: border-box;
   height: 600px;
   padding-top: 200px;
   padding-bottom: 280px;
@@ -165,10 +171,7 @@ ul {
   background-color: var(--primary-bg-color);
   width: 1200px;
 }
-.links-main {
-  margin: 0;
-  padding: 0;
-}
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -221,8 +224,6 @@ OR
 
 /* ====================  benefits of cooperation===================*/
 .benefits {
-  margin: 0;
-  padding: 0;
   margin-top: 94px;
 }
 
@@ -232,8 +233,6 @@ OR
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  margin: 0;
-  padding: 0;
 }
 .benefits .title + .title {
   margin-left: 30px;
@@ -246,8 +245,6 @@ OR
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  margin: 0;
-  padding: 0;
 }
 .text {
   width: 270px;
@@ -255,12 +252,8 @@ OR
 }
 .bgc-benef {
   background-color: var(--third-bg-color);
-  margin: 0;
-  padding: 0;
 }
 .features {
-  margin: 0;
-  padding: 0;
   display: flex;
 }
 
@@ -273,8 +266,6 @@ OR
   background-color: var(--forth-bg-color);
 }
 .what-we-do-ul {
-  padding: 0;
-  margin: 0;
   display: flex;
 }
 .what-we-do-ul .what-we-do-li + .what-we-do-li {
@@ -286,8 +277,6 @@ OR
 }
 
 .our-team-ul {
-  padding: 0;
-  margin: 0;
   display: flex;
 }
 .our-team-ul .our-team-li + .our-team-li {
@@ -306,8 +295,6 @@ OR
   font-size: 36px;
   line-height: 1.6;
   text-align: center;
-  margin: 0;
-  padding: 0;
   padding-top: 94px;
 }
 .team {
@@ -315,16 +302,12 @@ OR
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
-  margin: 0;
-  padding: 0;
   text-align: center;
   padding-top: 30px;
 }
 .desc {
   font-size: 16px;
   line-height: 1.18;
-  margin: 0;
-  padding: 0;
   text-align: center;
   padding-top: 10px;
   padding-bottom: 30px;
@@ -332,12 +315,7 @@ OR
 /* ====================END about our team container===================*/
 
 /*footer*/
-.foot-main {
-  margin: 0;
-  padding: 0;
-  padding-left: 15px;
-  padding-right: 15px;
-}
+
 .footer {
   background-color: var(--second-bg-color);
   text-decoration: none;
@@ -370,8 +348,6 @@ OR
 .decor-footer {
   padding-top: 60px;
   padding-bottom: 20px;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 /* ====================END FOOTER===================*/
 
@@ -383,8 +359,6 @@ OR
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
-  margin: 0;
-  padding: 0;
 }
 .button .but:hover,
 .button .but:focus {
@@ -438,17 +412,16 @@ OR
   padding-bottom: 20px;
 }
 
-.text-elem {
-  margin: 0;
-  padding: 0;
-}
-
 .features {
   flex-wrap: wrap;
 }
 
 /*=========================PORTFOLIO============================*/
 
-.header-dec {
+.container {
   width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
