--- a/css/styles.css
+++ b/css/styles.css
@@ -372,10 +372,13 @@ padding-top: 60px;
 .footer-li {
   margin-top: 9px;
 }
+
+.decor-footer .nav{
+ margin-top: 60px;
+}
 .decor-footer{
   padding-top: 60px;
 }
-
 
 .footer-addr:not(:nth-child(3n)){
   
