--- a/css/styles.css
+++ b/css/styles.css
@@ -338,6 +338,8 @@ OR
   background-color: var(--second-bg-color);
   text-decoration: none;
   list-style: none;
+  box-sizing: border-box;
+  height: 252px;
   
   
 }
@@ -346,8 +348,31 @@ OR
   font-size: 14px;
   line-height: 1.71;
   font-style: normal;
-  box-sizing: border-box;
-  height: 172px;
+  margin-bottom: 60px;
+}
+.footer-link {
+  color: var(--footer-text-color);
+  font-size: 14px;
+  line-height: 1.71;
+  text-decoration: none;
+  list-style: none;
+}
+/*здесь стоит паддинг
+ потому что если поставить марджин добавляеется
+  отспуп сверху(пустой)*/
+.decor-footer {
+ padding-top: 60px;
+}
+
+.footer-li:first-child{
+  margin-top: 20px;
+}
+
+.footer-li {
+  margin-top: 9px;
+}
+.footer-tel{
+  margin-top: 9px;
 }
 
 /*.footer-main{
@@ -356,19 +381,11 @@ padding-top: 60px;
 }*/
 
 
-.footer-link {
-  color: var(--footer-text-color);
-  font-size: 14px;
-  line-height: 1.71;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
+ /*gfhbfthb
+  
 
 }
-.text-elem {
-  font-size: 16px;
-  line-height: 1.87;
-}
+
 .footer-li {
   margin-top: 9px;
 }
@@ -384,6 +401,15 @@ padding-top: 60px;
   
   padding-bottom: 60px;
 }
+
+
+
+
+
+
+
+
+*/
 
 /*.footer-tel {
   padding-bottom: 60px;
@@ -491,7 +517,10 @@ padding-top: 60px;
   margin-bottom: 94px;
 }
 
-
+.text-elem {
+  font-size: 16px;
+  line-height: 1.87;
+}
 
 
 /*.our-team-li {
